--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
   </style>
 </head>
 <body>
-  <div id="app">
-    <div>111</div>
-  </div>
+  <div id="app"></div>
 </body>
 <script src="./GFB/index.js"></script>
 <script src="./index.js"></script>
