--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
   </style>
 </head>
 <body>
+  <div>
+    index.html和index.js为示例代码
+  </div>
   <div id="app"></div>
 </body>
 <script src="./GFB/index.js"></script>
