--- a/index.html
+++ b/index.html
@@ -5,33 +5,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <style>
-    .move_block{
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100px;
-      height: 100px;
-      background: #f00;
-    }
-    .showMask{
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      z-index: 9999;
-    }
-  </style>
+  <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-  <div>
-    index.html和index.js为示例代码
-  </div>
   <div id="app"></div>
 </body>
 <script src="./GFB/index.js"></script>
-<script src="./index.js"></script>
+<script src="./Example/index.js"></script>
+<script src="./Example/header.js"></script>
 <script>
   new testClass("#app")
 </script>
