完善组件功能

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <script src="./GFB/index.js"></script>
 <script src="./Example/index.js"></script>
 <script src="./Example/header.js"></script>
+<script src="./Example/sub.js"></script>
+
 <script>
-  new testClass("#app")
+  new testClass( document.getElementById('app') )
 </script>
 </html>
