优化 组件功能

--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
 <script src="./Example/sub.js"></script>
 
 <script>
-  new testClass( document.getElementById('app') )
+  new testClass(document.getElementById('app'),this)
 </script>
 </html>
