--- a/index.html
+++ b/index.html
@@ -10,12 +10,20 @@
 <body>
   <div id="app"></div>
 </body>
+<!-- 引入GFB库 -->
 <script src="./GFB/index.js"></script>
+<!-- 组件是以资源文件的形式引入 -->
 <script src="./Example/index.js"></script>
 <script src="./Example/header.js"></script>
 <script src="./Example/sub.js"></script>
-
 <script>
-  new testClass(document.getElementById('app'),this)
+  /* 
+    挂载GFB实例
+    第一参数为挂载元素，
+    后续可以传入其他参数，便于在组件内部使用
+    示例：new testClass(document.getElementById('app'),params1,params2...)
+  */
+  let params = "成功运行示例代码"
+  new testClass(document.getElementById('app'),params)
 </script>
 </html>
