优化组件处理方式

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <script src="./Example/index.js"></script>
 <script src="./Example/header.js"></script>
 <script src="./Example/sub.js"></script>
+<script src="./Example/introduction.js"></script>
 <script>
   /* 
     挂载GFB实例
