优化示例代码

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <!-- 引入GFB库 -->
 <script src="./GFB/index.js"></script>
 <!-- 组件是以资源文件的形式引入 -->
-<script src="./Example/index.js"></script>
-<script src="./Example/header.js"></script>
-<script src="./Example/sub.js"></script>
-<script src="./Example/introduction.js"></script>
+<script src="./Example/Index.js"></script>
+<script src="./Example/Header.js"></script>
+<script src="./Example/Introduction.js"></script>
+<script src="./Example/Document.js"></script>
 <script>
   /* 
     挂载GFB实例
@@ -25,6 +25,6 @@
     示例：new testClass(document.getElementById('app'),params1,params2...)
   */
   let params = "成功运行示例代码"
-  new testClass(document.getElementById('app'),params)
+  new Index(document.getElementById('app'),params)
 </script>
 </html>
