优化组件错误提示

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 <!-- 引入GFB库 -->
 <script src="./GFB/index.js"></script>
 <!-- 组件是以资源文件的形式引入 -->
-<script src="./Example/Router.js"></script>
 <script src="./Example/Index.js"></script>
+<script src="./Example/Router.js"></script>
+<script src="./Example/Home.js"></script>
 <script src="./Example/Header.js"></script>
 <script src="./Example/Introduction.js"></script>
 <script src="./Example/Document.js"></script>
@@ -25,6 +26,6 @@
     后续可以传入其他参数，便于在组件内部使用
     示例：new testClass(document.getElementById('app'),params1,params2...)
   */
-  new Router(document.getElementById('app'))
+  new Index(document.getElementById('app'))
 </script>
 </html>
