优化路由功能 优化服务功能

--- a/index.html
+++ b/index.html
@@ -14,11 +14,15 @@
 <script src="./GFB/index.js"></script>
 <!-- 组件是以资源文件的形式引入 -->
 <script src="./Example/Index.js"></script>
-<script src="./Example/Router.js"></script>
 <script src="./Example/Home.js"></script>
 <script src="./Example/Header.js"></script>
 <script src="./Example/Introduction.js"></script>
 <script src="./Example/Document.js"></script>
+
+<script src="./Router/Router.js"></script>
+
+<script src="./Service/IndexService.js"></script>
+ 
 <script>
   /* 
     挂载GFB实例
