--- a/index.html
+++ b/index.html
@@ -13,15 +13,19 @@
 <!-- 引入GFB库 -->
 <script src="./GFB/index.js"></script>
 <!-- 组件是以资源文件的形式引入 -->
-<script src="./Example/Index.js"></script>
-<script src="./Example/Home.js"></script>
-<script src="./Example/Header.js"></script>
-<script src="./Example/Introduction.js"></script>
-<script src="./Example/Document.js"></script>
-
-<script src="./Router/Router.js"></script>
-
-<script src="./Service/IndexService.js"></script>
+<script src="./Page/Index/index.js"></script>
+<script src="./Page/Introduction/index.js"></script>
+<!-- 文档 -->
+<script src="./Page/Document/index.js"></script>
+<link rel="stylesheet" href="./Page/Document/index.css">
+<!-- 组件 -->
+<script src="./Component/Header/index.js"></script>
+<script src="./Component/ComponentDocument/index.js"></script>
+<script src="./Component/RouterDocument/index.js"></script>
+<script src="./Component/ServiceDocument/index.js"></script>
+<!-- 路由和服务 -->
+<script src="./Router/index.js"></script>
+<script src="./Service/index.js"></script>
  
 <script>
   /* 
