--- a/index.html
+++ b/index.html
@@ -5,27 +5,34 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <!-- 引入GFB库 -->
+  <script src="./GFB/index.js"></script>
   <link rel="stylesheet" href="./index.css">
+
+  <!-- 页面 -->
+  <script src="./Page/Index/index.js"></script>
+  <link rel="stylesheet" href="./Page/Index/index.css">
+  <script src="./Page/Introduction/index.js"></script>
+  <script src="./Page/QuickStart/index.js"></script>
+  <!-- 文档 -->
+  <script src="./Page/Document/index.js"></script>
+  <link rel="stylesheet" href="./Page/Document/index.css">
+
+  <!-- 组件 -->
+  <!-- 头部组件 -->
+  <script src="./Component/Header/index.js"></script>
+  <link rel="stylesheet" href="./Component/Header/index.css">
+  <!-- 文档 -->
+  <script src="./Component/ComponentDocument/index.js"></script>
+  <script src="./Component/RouterDocument/index.js"></script>
+  <script src="./Component/ServiceDocument/index.js"></script>
+  <!-- 路由和服务 -->
+  <script src="./Router/index.js"></script>
+  <script src="./Service/index.js"></script>
 </head>
 <body>
   <div id="app"></div>
 </body>
-<!-- 引入GFB库 -->
-<script src="./GFB/index.js"></script>
-<!-- 组件是以资源文件的形式引入 -->
-<script src="./Page/Index/index.js"></script>
-<script src="./Page/Introduction/index.js"></script>
-<!-- 文档 -->
-<script src="./Page/Document/index.js"></script>
-<link rel="stylesheet" href="./Page/Document/index.css">
-<!-- 组件 -->
-<script src="./Component/Header/index.js"></script>
-<script src="./Component/ComponentDocument/index.js"></script>
-<script src="./Component/RouterDocument/index.js"></script>
-<script src="./Component/ServiceDocument/index.js"></script>
-<!-- 路由和服务 -->
-<script src="./Router/index.js"></script>
-<script src="./Service/index.js"></script>
  
 <script>
   /* 
