--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <!-- 引入GFB库 -->
-  <script src="./GFB/index.js"></script>
+  <script src="./GFB/gfb-min.js"></script>
   <link rel="stylesheet" href="./index.css">
 
   <!-- 页面 -->
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="./Page/Index/index.css">
   <script src="./Page/Introduction/index.js"></script>
   <script src="./Page/QuickStart/index.js"></script>
+  <link rel="stylesheet" href="./Page/QuickStart/index.css">
   <!-- 文档 -->
   <script src="./Page/Document/index.js"></script>
   <link rel="stylesheet" href="./Page/Document/index.css">
@@ -29,6 +30,13 @@
   <!-- 路由和服务 -->
   <script src="./Router/index.js"></script>
   <script src="./Service/index.js"></script>
+
+  <!-- 教程 -->
+  <script src="./Page/QuickStart/QuickStart_0.js"></script>
+  <script src="./Page/QuickStart/QuickStart_1.js"></script>
+  <script src="./Page/QuickStart/QuickStart_2.js"></script>
+  <script src="./Page/QuickStart/QuickStart_3.js"></script>
+  <script src="./Page/QuickStart/QuickStart_4.js"></script>
 </head>
 <body>
   <div id="app"></div>
