--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <script src="./Page/Index/index.js"></script>
   <link rel="stylesheet" href="./Page/Index/index.css">
   <script src="./Page/Introduction/index.js"></script>
+  <link rel="stylesheet" href="./Page/Introduction/index.css">
   <script src="./Page/QuickStart/index.js"></script>
   <link rel="stylesheet" href="./Page/QuickStart/index.css">
   <!-- 文档 -->
