--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>GFB数据驱动库</title>
   <!-- 引入GFB库 -->
   <script src="./GFB/gfb-min.js"></script>
   <link rel="stylesheet" href="./index.css">
