--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <link rel="stylesheet" href="./Page/Introduction/index.css">
   <script src="./Page/QuickStart/index.js"></script>
   <link rel="stylesheet" href="./Page/QuickStart/index.css">
+  <script src="./Page/Generousa/index.js"></script>
+  <link rel="stylesheet" href="./Page/Generousa/index.css">
   <!-- 文档 -->
   <script src="./Page/Document/index.js"></script>
   <link rel="stylesheet" href="./Page/Document/index.css">
