--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
   <link rel="shortcut icon" href="/logo.ico" type="image/x-icon">
   <title>GFB数据驱动库</title>
   <!-- 引入GFB库 -->
-  <script src="./GFB/gfb-min.js"></script>
+  <script src="./GFB/gfb.js"></script>
   <link rel="stylesheet" href="./index.css">
 
   <!-- 页面 -->
   <script src="./Page/Index/index.js"></script>
-  <link rel="stylesheet" href="./Page/Index/index.css">
   <script src="./Page/Introduction/index.js"></script>
   <link rel="stylesheet" href="./Page/Introduction/index.css">
   <script src="./Page/QuickStart/index.js"></script>
